# svggloo

./: .gitignore  Cargo.toml  README.md  code-of-conduct.md  justfile
.github/: README.md
.github/workflows/: ci-rust.yml
examples/brochure/: brochure_full.csv  main.rs
examples/quantifier/: bike_lane_categories.csv  main.rs
src/: cli.rs  lib.rs  main.rs  template.rs
