[package]
name = "svggloo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
clap = "3.0.0-beta.5"
csv = "1.1"
minijinja = "0.17.0"
serde = { version = "1", features = ["derive"] }